--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.772.0",
+    "aws-sdk": "^2.862.0",
     "bcrypt": "^3.0.7",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
+    "mime-types": "^2.1.29",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
     "multer": "^1.4.2",
